--- a/landing/index.html
+++ b/landing/index.html
@@ -22,66 +22,55 @@
   </header>
 
   <main>
-    <section class="hero">
-      <div class="container hero-wrap">
-        <h1>Елітне золото. Чесна ціна.</h1>
-        <p>Ми розкриваємо формулу ціни: котирування золота + робота майстра + маржа. Актуальність оновлень відображається на сторінці.</p>
-        <a class="btn" href="#about">Дізнатись більше</a>
-      </div>
-    </section>
+  <section id="about">
+    <div class="container">
+      <h2>Про компанію</h2>
+      <p>
+        Elite Gold — це ювелірний дім, який поєднує прозорість, елегантність і сучасні технології. 
+        Ми гарантуємо чесну ціну, підтверджену актуальними біржовими котируваннями.
+      </p>
+    </div>
+  </section>
 
-    <section id="about" class="section">
-      <div class="container grid-2">
-        <div>
-          <h2>Про компанію</h2>
-          <p>Elite Gold — ювелірний дім, що поєднує естетику та прозорість. Ми використовуємо перевірені постачання та сертифікацію кожного виробу.</p>
-        </div>
-        <div class="card">
-          <h3>Наш підхід до ціни</h3>
-          <ul>
-            <li>Біржове котирування XAU → ціна за грам</li>
-            <li>Вага виробу та проба (585/750/999)</li>
-            <li>Робота майстра та маржа</li>
-            <li>Актуальність: «оновлено N хв тому»</li>
-          </ul>
-        </div>
+  <section id="advantages" class="section-dark">
+    <div class="container grid-3">
+      <div class="card">
+        <h3>Прозорість</h3>
+        <p>Кожен виріб має відкриту формулу ціни: вартість золота + робота + маржа. Жодних прихованих надбавок.</p>
       </div>
-    </section>
+      <div class="card">
+        <h3>Сертифікація</h3>
+        <p>Усі прикраси сертифіковані та проходять експертну перевірку якості та походження металу.</p>
+      </div>
+      <div class="card">
+        <h3>Естетика</h3>
+        <p>Наші вироби створені дизайнерами, які поєднують класику з сучасними формами.</p>
+      </div>
+    </div>
+  </section>
 
-    <section id="trust" class="section muted">
-      <div class="container grid-3">
-        <div class="feature">
-          <h3>Сертифікація</h3>
-          <p>Кожен виріб має сертифікат відповідності та походження металу.</p>
-        </div>
-        <div class="feature">
-          <h3>Етичність</h3>
-          <p>Партнери дотримуються стандартів відповідального видобутку.</p>
-        </div>
-        <div class="feature">
-          <h3>Гарантія</h3>
-          <p>Обмін/повернення згідно з політикою протягом 14 днів.</p>
-        </div>
+  <section id="collection">
+    <div class="container">
+      <h2>Асортимент</h2>
+      <p>Оберіть свою прикрасу з колекцій Elite Gold: кільця, браслети, ланцюжки, сережки та ексклюзивні набори.</p>
+      <div class="grid-3">
+        <div class="card"><img src="https://images.unsplash.com/photo-1603398938378-0f04e6ae1b45?auto=format&fit=crop&w=500&q=80" alt="Кільце"><p>Кільця</p></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1590080875832-4c4c09f6c0a3?auto=format&fit=crop&w=500&q=80" alt="Браслет"><p>Браслети</p></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1589652717521-10c0d092dea9?auto=format&fit=crop&w=500&q=80" alt="Сережки"><p>Сережки</p></div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="contact" class="section">
-      <div class="container grid-2">
-        <div>
-          <h2>Контакти</h2>
-          <p>Email: info@elite-gold.example</p>
-          <p>Телефон: +380 (XX) XXX‑XX‑XX</p>
-          <p>Графік: Пн‑Пт 10:00–18:00</p>
-        </div>
-        <form class="card" onsubmit="event.preventDefault(); alert('Дякуємо! Ми з вами звʼяжемось.');">
-          <h3>Залиште заявку</h3>
-          <label>Імʼя <input type="text" required></label>
-          <label>Email <input type="email" required></label>
-          <button class="btn" type="submit">Відправити</button>
-        </form>
-      </div>
-    </section>
-  </main>
+  <section id="contact" class="section-dark">
+    <div class="container">
+      <h2>Контакти</h2>
+      <p>📞 Телефон: +380 (97) 123-45-67</p>
+      <p>📧 Email: info@elitegold.ua</p>
+      <p>🏙️ Адреса: м. Київ, вул. Золота, 1</p>
+    </div>
+  </section>
+</main>
+
 
   <footer class="site-footer">
     <div class="container footer-wrap">
